--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -13,19 +13,20 @@ h2
         flex-direction: column
         align-items: center
         .soporte
-            background: black
+            background: darkgray
             height: 100px
-            width: 20px
+            width: 15px
         .base
             background: black
             border-radius: 10px
-            padding: 35px
+            padding: 15px
 
 .light
-    height: 50px
-    width: 50px
+    height: 60px
+    width: 60px
     border-radius: 50%
-    margin: 10px 0px
+    margin: 15px 0px
+    transition: all 0.3s ease-in-out
 .light.yellow
     background: yellow
 .light.red
